COM-XXXX: msall code refactoring